--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,42 @@ body {
     background-color: #f4f4f4;
     color: #333;
 }
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 
+    @media screen and(max-width:767px) {
+        max-width: 480px;
+
+    }
+
+    @media screen and(min-width:768px) {
+        width: 768px;
+
+    }
+
+    @media screen and(min-width:1280px) {
+        width: 1200px;
+
+    }
+}
+.section {
+
+    @media screen and (max-width: 767px) {
+        padding: 60px 0;
+    }
+
+    @media screen and (min-width:768px) {
+        padding: 60px 0;
+    }
+
+    @media screen and (min-width: 1280px) {
+        padding: 94px 0;
+
+    }
+}
 h1, h2, h3 {
     margin-bottom: 10px;
 }
@@ -137,7 +172,10 @@ form label {
         font-size: 16px;
         color: #333;
 }
-
+*, *::before,
+ *::after {
+     box-sizing: border-box;
+ }
 form input, form textarea {
     width: 100%;
         padding: 10px;
