--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,55 @@
 /* Основные стили */
+:root {
+    --primary-text-color: #757575;
+    --title-text-color: #212121;
+    --accent-color: #2196F3;
+    --primary-white-color: #ffffff;
+    --card-set-gap: 20px;
+    --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
+html {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+}
+
+body {
+    margin: 0px;
+    color: var(--title-text-color);
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    line-height: 1.67;
+}
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+ul {
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+}
+
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -54,9 +105,39 @@ a {
 
 header {
     background-color: #333;
-    padding: 10px 0;
-   
-           
+    padding: 10px ;
+  
+        background: linear-gradient(45deg, #2e2e2e, #000, #111);
+        /* Градиент для создания глубины и блеска */
+        box-shadow: inset 0 0 50px rgba(255, 255, 255, 0.2),
+            /* Внутренний блик для отражения */
+            0 0 30px rgba(255, 255, 255, 0.3),
+            /* Легкий внешний блик */
+            0 0 60px rgba(0, 0, 0, 0.5);
+        /* Более глубокая тень для объема */
+       
+        
+        color: white;
+        /* Цвет текста */
+        text-align: center;
+        /* Выравнивание текста по центру */
+        font-family: Arial, sans-serif;
+        /* Шрифт */
+        overflow: hidden;
+        /* Скрываем выходящие тени */
+        @keyframes shine {
+                0% {
+                    background-position: 200% 0;
+                }
+        
+                50% {
+                    background-position: -200% 0;
+                }
+        
+                100% {
+                    background-position: 200% 0;
+                }
+            }
         
 }
 
@@ -98,32 +179,57 @@ header nav ul li a {
     padding: 50px 20px;
     text-align: center;
     background-color: #fff;
+    /* background: linear-gradient(135deg, #b0b0b0, #d1d1d1); */
 }
 
 .services {
-display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    margin-top: 30px;
+    display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));      
+        gap: 16px;  
+        padding: 16px;
+        box-sizing: border-box;
+        /* Учитываем отступы в общем размере */
+        width: 100%;
+        /* Устанавливаем ширину на 100%, чтобы не было выхода за пределы */
+        max-width: 100vw;
+        /* Ограничиваем ширину родителя размером экрана */
+    @media (max-width: 768px) {
+            .gallery {
+                grid-template-columns: 1fr;
+                /* Для мобильных устройств изображения будут в столбик */
+            }
+    /* .services {
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+            flex-direction: column;
+        } */
 }
-
+}
 .service-item-body {
-    background: url('../image/pexels-tima-miroshnichenko-6872609.jpg') no-repeat center center/cover;
+    background: url('../image/IMG_3579.jpg') no-repeat center center/cover;
     padding: 20px;
+    min-height: 140px;
+    width: 100%;
         border: 1px solid #ddd;
         border-radius: 8px;
         background-color: #fff;
 }
 .service-item-scheinwerfer {
-    background: url('../image/pexels-tima-miroshnichenko-6873186.jpg') no-repeat center center/cover;
+    background: url('../image/IMG_3561.jpg') no-repeat center center/cover;
     padding: 20px;
+    min-height: 140px;
+        width: 100%;
         border: 1px solid #ddd;
         border-radius: 8px;
         background-color: #fff;
 }
 .service-item-bodypolish {
-    background: url('../image/pexels-quentin-martinez-2147503099-29633972.jpg') no-repeat center center/cover;
+    background: url('../image/IMG_3565.jpg') no-repeat center center/cover;
     padding: 20px;
+    min-height: 140px;
+        width: 100%;
         border: 1px solid #ddd;
         border-radius: 8px;
         background-color: #fff;
@@ -131,6 +237,8 @@ display: grid;
 .service-item-inner {
     background: url('../image/pexels-tima-miroshnichenko-6872585.jpg') no-repeat center center/cover;
     padding: 20px;
+    min-height: 140px;
+        width: 100%;
         border: 1px solid #ddd;
         border-radius: 8px;
         background-color: #fff;
@@ -139,12 +247,16 @@ display: grid;
     padding: 50px 20px;
     text-align: center;
     background-color: #eaeaea;
+    @media screen and (min-width: 768px) {
+           
+        }
 }
 
 .gallery {
 display: flex;
     justify-content: space-between;
     margin-top: 30px;
+    
 }
 
 .gallery-item {
