--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,60 @@ body {
     background-color: #f4f4f4;
     color: #333;
 }
+
+.logo {
+    font-family: "Ralewey", sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    text-decoration: none;
+    letter-spacing: 0.03em;
+    margin-right: 93px;
+    display: block;
+    color: #2196F3;
+}
+
+@media screen and (max-width: 767px) {
+    .logo {
+        margin-right: 0px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: start;
+        -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .logo {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        margin-right: 75px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .logo {
+        margin-right: 93px;
+    }
+}
+
+.logo-dark {
+    color: var(--title-text-color);
+}
 .container {
     padding-left: 15px;
     padding-right: 15px;
