--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ body {
 .logo {
     font-family: "Ralewey", sans-serif;
     font-weight: 700;
-    font-size: 26px;
+    font-size: 32px;
     line-height: 1.2;
     text-decoration: none;
     letter-spacing: 0.03em;
@@ -86,6 +86,7 @@ body {
         -webkit-justify-content: flex-start;
         -ms-flex-pack: start;
         justify-content: flex-start;
+        margin-bottom: 25px;
     }
 }
 
@@ -100,6 +101,7 @@ body {
         -ms-flex-align: center;
         align-items: center;
         margin-right: 75px;
+        margin-bottom: 25px;
     }
 }
 
@@ -220,7 +222,7 @@ a {
     }
 
     .logo img {
-        max-height: 50px;
+        max-height: 60px;
         /* Уменьшаем логотип для мобильных */
     }
 
@@ -265,7 +267,7 @@ a {
             /* Задержка для четвертого пункта */
         }
     .nav a {
-        font-size: 16px;
+        font-size: 20px;
         /* Меньший размер шрифта на мобильных */
     }
         @keyframes slideIn {
@@ -285,9 +287,9 @@ a {
             cursor: pointer;
             text-transform: uppercase;
             font-weight: bold;
-            width: 50px;
+            width: 90px;
         
-            height: 50px;
+            height: 90px;
             
             border-radius: 50%;
            
@@ -369,7 +371,7 @@ header nav ul li {
 header nav ul li a {
     color: white;
         text-decoration: none;
-        font-size: 16px;
+        font-size: 20px;
 }
 
 .hero {
