--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ header nav ul li a {
 }
 
 .hero {
-    background: url('../image/pexels-tima-miroshnichenko-6873186.jpg') no-repeat center center/cover;
+    background:-webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url('../image/IMG_3565.jpg') no-repeat center center/cover;
     color: white;
     padding: 50px 10%;
     text-align: center;
@@ -391,9 +391,9 @@ header nav ul li a {
 }
 
 #services {
-    padding: 50px 20px;
+    padding: 50px 0px;
     text-align: center;
-    background-color: #fff;
+    /* background-color: #fff; */
     /* background: linear-gradient(135deg, #b0b0b0, #d1d1d1); */
 }
 
@@ -469,7 +469,7 @@ header nav ul li a {
 
 .gallery {
 display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 30px;
     
 }
