--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ header nav ul li a {
 }
 
 .hero {
-    background:-webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url('../image/IMG_3565.jpg') no-repeat center center/cover;
+    background:-webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url('../image/IMG_3579.JPG') no-repeat center center/cover;
     color: white;
     padding: 50px 10%;
     text-align: center;
