--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,8 @@ a {
     /* Кнопка для открытия меню на мобильных */
         .menu-toggle {
             display: block;
-            background-color: rgba(0, 0, 0, 0.4);
+            /* background-color: rgba(0, 0, 0, 0.3); */
+            background-color: rgba(255, 255, 255, 0.3);
             border: none;
             padding: 10px;
             cursor: pointer;
